static/css/styles.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    color: #333;
}
.content-wrapper {
    display: flex;
    align-items: center;
    gap: 40px;
}

.content-wrapper.reverse {
    flex-direction: row-reverse;
}

.text-content {
    flex: 1;
}

.image-placeholder1 {
    flex: 1;
    height: 300px;
    background: url(../images/pexels-lee-campbell-18167-89724.jpg) no-repeat center center/cover;
    border-radius: 10px;
}

.image-placeholder2 {
    flex: 1;
    height: 300px;
    background: url(../images/blueprint-681318_1280.jpg) no-repeat center center/cover;
    border-radius: 10px;
}


h1, h2 {
    font-weight: 700;
}

p, li, input, textarea, button {
    font-weight: 400;
}

/* Delayed fade-in for staggered effect */
#services {
    animation-delay: 0.2s;
}

#about {
    animation-delay: 0.4s;
}

#contact {
    animation-delay: 0.6s;
}

header {
    background-color: #1f1f1f;
    color: #fff;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

.navbar {
    min-height: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 24px;
}

.nav-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 60px;
  }
  
  .nav-branding {
    font-size: 2rem;
  }
  
  .nav-link {
    transition: 0.7s ease;
  }
  
  .nav-link:hover {
    color: hwb(192 0% 34%);
  }

.container {
    width: 90%; 
    max-width: 1200px; 
    margin: auto;
    overflow: hidden;
    padding: 20px;
	    .testimonial-card {
        width: 100%;
    }
}
.hero {
    /*Placeholder*/
    background: url(../images/engine.jpg) no-repeat center center/cover;
    height: 500px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    text-align: center;
}

.hero h1 {
    font-size: 3em;
    animation: fadeInDown 1s;
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        transform: translateY(-20px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

section {
    padding: 40px 0;
    border-bottom: 1px solid #ccc;
    opacity: 0;
    animation: fadeIn 1s forwards;
    transition: background-color 0.3s, color 0.3s;
}

section h2 {
    margin-bottom: 20px;
    position: relative;
    animation: fadeIn 1s;
}

#testimonials {
    padding: 40px 0;
    background-color: #f4f4f4;
    opacity: 0;
    animation: fadeIn 1s forwards;
    animation-delay: 0.6s;
    transition: background-color 0.3s, color 0.3s;
}

#testimonials .card:hover {
    /* Hover effects disabled for .card elements inside testimonials */
    transform: none;
    box-shadow: none;
}

#testimonials h2 {
    text-align: center;
    margin-bottom: 20px;
}

.testimonials-wrapper {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.testimonial-card {
    background-color: #fff;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin: 10px;
    width: calc(45% - 20px); /* Adjusted width calculation to accommodate margins, was fucking itself up idk why */
    transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
    position: relative;
    cursor: pointer;
    opacity: 0;
    animation: fadeIn 1s forwards;
}

.testimonial-card:hover {
    transform: translateY(-10px);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}

.testimonial-info {
    margin-top: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.testimonial-info h3 {
    font-size: 1.2em;
    margin: 0;
}

.stars {
    font-size: 1.2em;
    color: #FFD700; /* Gold color for stars */
}

#features {
    padding: 40px 0;
    opacity: 0;
    animation: fadeIn 1s forwards;
    animation-delay: 0.8s;
}

#features h2 {
    text-align: center;
    margin-bottom: 30px;
}

.features-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 20px;
    max-width: 900px; /* Możesz dostosować tę wartość */
    margin: 0 auto;
}

.feature-card {
    background-color: #fff;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s, box-shadow 0.3s;
    display: flex;
    flex-direction: column;
    justify-content: center;
    aspect-ratio: 1 / 1; /* Zapewnia kwadratowy kształt */
}

.feature-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.feature-card h3 {
    margin-top: 0;
    margin-bottom: 10px;
    color: #333;
    font-size: 1em;
}

.feature-card p {
    margin: 0;
    color: #666;
    font-size: 0.8em;
}

body.dark-mode .feature-card {
    background-color: #444;
    color: #f4f4f4;
}

body.dark-mode .feature-card h3 {
    color: #f4f4f4;
}

body.dark-mode .feature-card p {
    color: #ccc;
}

@media (max-width: 768px) {
    .testimonial-card {
        width: 100%;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.card {
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    margin-bottom: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
}

.card:hover {
    transform: translateY(-10px);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}

#contact form {
    display: flex;
    flex-direction: column;
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s, box-shadow 0.3s;
}

#contact form input, #contact form textarea {
    margin-bottom: 10px;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    transition: border-color 0.3s, background-color 0.3s, color 0.3s;
}

#contact form input:focus, #contact form textarea:focus {
    border-color: #333;
}

#contact form button {
    padding: 10px;
    border: none;
    border-radius: 5px;
    background-color: #333;
    color: #fff;
    cursor: pointer;
    transition: background-color 0.3s, transform 0.3s;
}

#contact form button:hover {
    background-color: #555;
    transform: scale(1.05);
}

@media (max-width: 768px) {
    .container {
        width: 95%;
        padding: 10px;
}}

footer {
    background-color: #1f1f1f;
    color: #fff;
    padding: 20px 0;
    text-align: center;
    font-size: 0.9em;
}

footer nav a {
    color: #fff;
    margin: 0 10px;
    text-decoration: none;
    font-size: 0.9em;
}

footer nav a:hover {
    color: #f4f4f4;
}

/* Default light mode styles */
body.light-mode {
    background-color: #f4f4f4;
    color: #333;
}

header.light-mode {
    background-color: #1f1f1f;
    color: #fff;
}

/* Dark mode styles */
body.dark-mode {
    background-color: #333;
    color: #f4f4f4;
}

header.dark-mode {
    background-color: #f4f4f4;
    color: #1f1f1f;
}

body.dark-mode #testimonials {
    background-color: #333;
    color: #f4f4f4;
}

body.dark-mode .testimonial-card {
    background-color: #444;
    color: #f4f4f4;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

body.dark-mode .testimonial-card:hover {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
}

body.dark-mode .card {
    background-color: #444;
    color: #f4f4f4;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

body.dark-mode #contact form {
    background-color: #444;
    color: #f4f4f4;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

body.dark-mode #contact form input,
body.dark-mode #contact form textarea {
    background-color: #555;
    color: #f4f4f4;
    border: 1px solid #777;
}

body.dark-mode #contact form input:focus,
body.dark-mode #contact form textarea:focus {
    border-color: #f4f4f4;
}

#language-toggle,
#dark-mode-toggle {
    background: none;
    border: none;
    padding: 5px;
    cursor: pointer;
    margin-left: 10px;
    background-color: #1f1f1f;
    color: #fff;
}

#dark-mode-toggle .icon {
    width: 2.5vw;
    height: 5vh;
    display: none;
}

#dark-mode-toggle .moon {
    display: block;
}

.dark-mode .moon {
    display: none;
}

.dark-mode .sun {
    display: block;
}

.hamburger {
    display: none;
    cursor: pointer;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: white;
  }

@media (max-width: 768px) {
    .content-wrapper, .content-wrapper.reverse {
        flex-direction: column;
        }
    
    .image-placeholder {
        width: 100%; 
       height: 200px; 
    }
    
    .hamburger {
        display: block;
    }
    .hamburger.active .bar:nth-child(2) {
    opacity: 0;
    }
    .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
    }
    .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
    }
    .nav-menu {
    position: fixed;
    left: -111%;
    top: 70px;
    gap: 0;
    flex-direction: column;
    background-color: #1f1f1f;
    width: 100%;
    text-align: center;
    justify-content: center;
    transition: 0.3s;
    z-index: 999;
    }

    .nav-item {
    margin: 16px 0;
    }

    .nav-menu.active {
    left: -8%;
    }
    .features-grid {
        grid-template-columns: repeat(3, 1fr);
        gap: 10px;
    }

    .feature-card h3 {
        font-size: 0.8em;
    }

    .feature-card p {
        font-size: 0.7em;
    }
}

.founders-grid {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
}

.founder-card {
    flex: 1;
    margin: 0 10px;
    padding: 20px;
    background-color: #f9f9f9;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
}

.founder-card img {
    width: 100%;
    height: auto;
    border-radius: 50%;
    margin-bottom: 10px;
}

.founder-card h4 {
    margin: 10px 0;
}

.founder-card p {
    margin: 5px 0;
}

.black {
    color: #1f1f1f;
}

@media (max-width: 480px) {
    .feature-card h3 {
        font-size: 0.7em;
    }

    .feature-card p {
        font-size: 0.6em;
    }
}
@media (max-width: 768px) {
    .features-grid {
        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    }
}
@media (max-width: 768px) {
    header {
      position: fixed;
      top: 0;
      width: 100%;
      z-index: 1000; 
    }
  
    body {
      padding-top: 90px;
    }
  
    .container {
      margin-top: 20px;
    }

    .navbar{
        height: 90px;
    }

    .founders-grid {
        flex-direction: column;
    }

    .founder-card {
        margin: 10px 0;
    }
  }

